--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "inputmask": "^4.0.9",
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.12",
-    "react-dadata": "^1.3.3",
+    "react-dadata-suggestions": "^1.3.3",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.2"
   },
